Force Vercel to not use frozen-lockfile

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
-  "installCommand": "pnpm install",
+  "installCommand": "pnpm install --no-frozen-lockfile",
   "buildCommand": "pnpm build",
-  "framework": "nextjs"
+  "framework": "nextjs",
+  "env": {
+    "PNPM_FLAGS": "--no-frozen-lockfile"
+  }
 }
 
